2020-04-06  Jay Berkenbilt  <ejb@ql.org>

	* 10.0.0: release

	* Move random number generation into the crypto providers. The old
	os-based secure random number generation with fallback to insecure
	random number generation (only if allowed at build time) has moved
	into the native crypto provider. If using other providers
	(currently gnutls or openssl), random number generation will use
	those libraries. The old interfaces for supplying your own random
	number generator are still in place. Fixes #418.

	* Source-level incompatibility: remove QUtil::srandom. There was
	no reason to ever call this, and it didn't do anything unless
	insecure random number generation was compiled in, which it is not
	by default. If you were calling this, just remove the call because
	it wasn't doing anything anyway.

	* Add openssl crypto provider, contributed by Dean Scarff. This
	provider is implemented using OpenSSL and also works with
	BoringSSL.

2020-04-04  Jay Berkenbilt  <ejb@ql.org>

	* Add a new provideStreamData method for StreamDataProvider that
	allows a success code to be returned and that accepts the
	suppress_warnings and will_retry methods. This makes it possible
	to have a StreamDataProvider call pipeStreamData and propagate its
	results back. This change allows better error handling and
	recovery when objects are copied from other files and when
	"immediate copy from" is enabled.

	* When copying foreign streams, the same type of recovery from
	streams with filtering errors is performed as when dealing with
	streams in the original input. This could happen, for example, if
	you are using the --pages option to take pages from another file
	and that file has errors in it.

	* Add a new version of QPDFObjectHandle::pipeStreamData whose
	return value indicates overall success or failure rather than
	whether nor not filtering was attempted. It should have always
	been this way. This change was done in a backward-compatible